--- a/index.html
+++ b/index.html
@@ -328,15 +328,13 @@
                                 <h3 class="text-xl font-bold text-white">Associate Data Management</h3>
                                 <span class="text-red-500 mono font-semibold">2023 — PRESENT</span>
                             </div>
-                            <h4 class="text-lg text-red-500 font-semibold mb-4">TechCorp Analytics</h4>
+                            <h4 class="text-lg text-red-500 font-semibold mb-4">DHL Express</h4>
                             <p class="text-slate-300 leading-relaxed mb-4">
                                 Lead data scientist for predictive modeling initiatives, resulting in 40% improvement in forecast accuracy. Developed automated reporting systems serving 500+ stakeholders daily.
                             </p>
                             <div class="flex flex-wrap gap-2">
-                                <span class="bg-red-900/30 text-red-300 px-3 py-1 rounded text-sm mono">Python</span>
-                                <span class="bg-red-900/30 text-red-300 px-3 py-1 rounded text-sm mono">TensorFlow</span>
-                                <span class="bg-red-900/30 text-red-300 px-3 py-1 rounded text-sm mono">PostgreSQL</span>
-                                <span class="bg-red-900/30 text-red-300 px-3 py-1 rounded text-sm mono">Tableau</span>
+                                <span class="bg-red-900/30 text-red-300 px-3 py-1 rounded text-sm mono">Excel</span>
+                                <span class="bg-red-900/30 text-red-300 px-3 py-1 rounded text-sm mono">AS400</span>
                             </div>
                         </div>
 
@@ -757,4 +755,5 @@
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'97f552fa767f40a1',t:'MTc1NzkwOTk0OC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
 
