--- a/index.html
+++ b/index.html
@@ -197,37 +197,37 @@
     <!-- Split Layout Container -->
     <div class="lg:flex min-h-screen">
         <!-- Left Sidebar - Fixed -->
-        <div class="lg:w-1/2 lg:fixed lg:h-screen lg:flex lg:flex-col lg:justify-between p-8 lg:p-16 dark-gradient">
+        <div class="lg:w-1/3 lg:fixed lg:h-screen lg:flex lg:flex-col lg:justify-between p-6 lg:p-12 dark-gradient">
             <!-- Header Section -->
             <div>
                 <div class="mb-8">
-                    <h1 class="text-5xl lg:text-6xl font-black mb-4 text-shadow">
+                    <h1 class="text-4xl lg:text-5xl font-black mb-4 text-shadow">
                         <span class="text-white">ALEX</span>
                         <span class="text-red-500">MORGAN</span>
                     </h1>
-                    <h2 class="text-2xl lg:text-3xl font-bold text-slate-300 mb-6 typewriter">
+                    <h2 class="text-xl lg:text-2xl font-bold text-slate-300 mb-6 typewriter">
                         Data Analyst & Soccer Strategist
                     </h2>
-                    <p class="text-lg text-slate-400 leading-relaxed max-w-md">
+                    <p class="text-base text-slate-400 leading-relaxed max-w-sm">
                         Transforming complex datasets into strategic insights. Building championship-winning formations through data-driven analysis.
                     </p>
                 </div>
                 
                 <!-- Navigation -->
-                <nav class="space-y-4 mb-12">
-                    <a href="#about" class="nav-indicator block text-lg font-semibold text-slate-300 hover:text-red-500 transition-all duration-300 uppercase tracking-wider">
+                <nav class="space-y-3 mb-10">
+                    <a href="#about" class="nav-indicator block text-base font-semibold text-slate-300 hover:text-red-500 transition-all duration-300 uppercase tracking-wider">
                         About
                     </a>
-                    <a href="#experience" class="nav-indicator block text-lg font-semibold text-slate-300 hover:text-red-500 transition-all duration-300 uppercase tracking-wider">
+                    <a href="#experience" class="nav-indicator block text-base font-semibold text-slate-300 hover:text-red-500 transition-all duration-300 uppercase tracking-wider">
                         Experience
                     </a>
-                    <a href="#education" class="nav-indicator block text-lg font-semibold text-slate-300 hover:text-red-500 transition-all duration-300 uppercase tracking-wider">
+                    <a href="#education" class="nav-indicator block text-base font-semibold text-slate-300 hover:text-red-500 transition-all duration-300 uppercase tracking-wider">
                         Education
                     </a>
-                    <a href="#projects" class="nav-indicator block text-lg font-semibold text-slate-300 hover:text-red-500 transition-all duration-300 uppercase tracking-wider">
+                    <a href="#projects" class="nav-indicator block text-base font-semibold text-slate-300 hover:text-red-500 transition-all duration-300 uppercase tracking-wider">
                         Projects
                     </a>
-                    <a href="#formations" class="nav-indicator block text-lg font-semibold text-slate-300 hover:text-red-500 transition-all duration-300 uppercase tracking-wider">
+                    <a href="#formations" class="nav-indicator block text-base font-semibold text-slate-300 hover:text-red-500 transition-all duration-300 uppercase tracking-wider">
                         Formations
                     </a>
                 </nav>
@@ -254,8 +254,8 @@
         </div>
         
         <!-- Right Content - Scrollable -->
-        <div class="lg:w-1/2 lg:ml-auto">
-            <div class="p-8 lg:p-16 space-y-32">
+        <div class="lg:w-2/3 lg:ml-auto">
+            <div class="p-8 lg:p-12 space-y-32">
 
                 <!-- About Section -->
                 <section id="about" class="section-fade-in">
@@ -807,5 +807,5 @@
             }
         });
     </script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'97f8990047550f58',t:'MTc1Nzk0NDI3NC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'97f8a84a77ddc63b',t:'MTc1Nzk0NDkwMC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
