--- a/index.html
+++ b/index.html
@@ -202,14 +202,14 @@
             <div>
                 <div class="mb-8">
                     <h1 class="text-4xl lg:text-5xl font-black mb-4 text-shadow">
-                        <span class="text-white">ALEX</span>
-                        <span class="text-red-500">MORGAN</span>
+                        <span class="text-white">IMAN</span>
+                        <span class="text-red-500">RAHMAN</span>
                     </h1>
                     <h2 class="text-xl lg:text-2xl font-bold text-slate-300 mb-6 typewriter">
-                        Data Analyst & Soccer Strategist
+                        Data Analyst & Soccer Enthusiast
                     </h2>
                     <p class="text-base text-slate-400 leading-relaxed max-w-sm">
-                        Transforming complex datasets into strategic insights. Building championship-winning formations through data-driven analysis.
+                        Currently part of DHL’s Asia Pacific Shared Services – Data Management Team, where I handle inbound data cleansing and classification for dutiable goods entering Germany, supporting smooth and compliant customs clearance processes.
                     </p>
                 </div>
                 
@@ -228,7 +228,7 @@
                         Projects
                     </a>
                     <a href="#formations" class="nav-indicator block text-base font-semibold text-slate-300 hover:text-red-500 transition-all duration-300 uppercase tracking-wider">
-                        Formations
+                        Templates
                     </a>
                 </nav>
             </div>
@@ -809,3 +809,4 @@
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'97f8a84a77ddc63b',t:'MTc1Nzk0NDkwMC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
