--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         }
         
         body {
-            font-family: 'Inter', sans-serif;
+            font-family: 'Nippo', sans-serif;
+            src: url('../fonts/Nippo-Light.woff2') format('woff2')
             min-height: 100vh;
             background: linear-gradient(135deg, #0f172a, #1e3a8a, #0891b2);
             color: white;
@@ -875,3 +876,4 @@
     </script>
 </body>
 </html>
+
