--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,8 +16,7 @@
         }
         
         body {
-            font-family: 'Nippo', sans-serif;
-            src: url('../fonts/Nippo-Light.woff2') format('woff2')
+            font-family: 'Inter', sans-serif;
             min-height: 100vh;
             background: linear-gradient(135deg, #0f172a, #1e3a8a, #0891b2);
             color: white;
@@ -876,4 +876,3 @@
     </script>
 </body>
 </html>
-
